# c2cwsgiutils

./: .bandit.yaml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .secretsignore  .snyk  BACKPORT_TODO  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.3.5  Dockerfile.full  Dockerfile.light  Dockerfile.lite  Jenkinsfile  LICENSE.txt  Makefile  Pipfile  README.md  SECURITY.md  build_full.sh  c2cwsgiutils-run  c2cwsgiutils_check_es.py  c2cwsgiutils_coverage_report.py  c2cwsgiutils_genversion.py  c2cwsgiutils_run  c2cwsgiutils_stats_db.py  c2cwsgiutils_test_print.py  dev_requirements.txt  docker-requirements-full.txt  fake_python3  install_docker.sh  install_gdal.sh  pip-cve-ignore  (+12 more)
.dependabot/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  ci-upgrade.yaml  dependabot.yaml  dependabot.yml  ghci.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  ci.yaml  clean-dockerhub-tag.yaml  clean.yaml  codeql.yaml  dependabot-auto-merge.yaml  main.yaml  main.yml  pull-request-automation.yaml  rebuild-234.yaml  rebuild.yaml  rebuild.yml
acceptance_tests/app/: .coveragerc  .dockerignore  Dockerfile  Pipfile  README.md  application.wsgi  development.ini  gunicorn.conf.py  models_graph.py  production.ini  pyproject.toml  requirements.txt  run_alembic.sh  setup.py
acceptance_tests/app/.whiskey/: custom_apache.conf  server_args
acceptance_tests/app/.whiskey/action_hooks/: pre-build
acceptance_tests/app/app_alembic/: env.py
acceptance_tests/app/app_alembic/versions/: 4a8c1bb4e775_initial_version.py
acceptance_tests/app/c2cwsgiutils_app/: __init__.py  get_hello.py  models.py  services.py
acceptance_tests/app/scripts/: wait-db
acceptance_tests/gunicorn_app/: .coveragerc  Dockerfile  gunicorn.conf.py  production.ini  pyproject.toml  requirements.txt
acceptance_tests/gunicorn_app/app_alembic/versions/: 4a8c1bb4e775_initial_version.py
acceptance_tests/gunicorn_app/c2cwsgiutils_app/: __init__.py  get_hello.py  services.py
acceptance_tests/tests/: .env  Dockerfile  Pipfile  README.md  docker-compose.override.sample.yaml  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  install-docker  requirements.txt
acceptance_tests/tests/redis/: Dockerfile  README  entrypoint
acceptance_tests/tests/tests/: conftest.py  test_broadcast.py  test_client_info.py  test_composition.py  test_connection.py  test_cors.py  test_db.py  test_db_maintenance.py  test_debug.py  test_error.py  test_genversion.py  test_health_check.py  test_index.py  test_json.py  test_logging.py  test_ping.py  test_prometheus_client.py  test_request_tracking.py  test_scripts.py  test_sql_profiler.py  test_stats.py  test_stats_db.py  test_timeout.py  test_versions.py
acceptance_tests/waitress_app/: .dockerignore  Dockerfile  alembic.ini  production.ini  pyproject.toml  requirements.txt  run-alembic
acceptance_tests/waitress_app/app_alembic/: env.py
acceptance_tests/waitress_app/c2cwsgiutils_app/: __init__.py  get_hello.py  models.py
acceptance_tests/waitress_app/scripts/: wait-db
c2cwsgiutils/: __init__.py  _auth.py  _metrics_stats.py  _patches.py  _utils.py  auth.py  client_info.py  config_utils.py  coverage_setup.py  db.py  db_maintenance_view.py  debug.py  errors.py  health_check.py  index.py  loader.py  logging_view.py  metrics.py  models_graph.py  pretty_json.py  profiler.py  prometheus.py  prometheus_client.py  pyramid.py  pyramid_logging.py  redis_stats.py  redis_utils.py  request_tracking.py  sentry.py  services.py  setup_process.py  sql_profiler.py  sqlalchemy_profile.py  stats.py  stats_pyramid.py  version.py  wsgi.py  wsgi_app.py
c2cwsgiutils/_broadcast/: __init__.py  interface.py  local.py  redis.py  utils.py
c2cwsgiutils/acceptance/: __init__.py  composition.py  connection.py  image.py  package-lock.json  package.json  print.py  screenshot.js  utils.py
c2cwsgiutils/broadcast/: __init__.py  interface.py  local.py  redis.py  utils.py
c2cwsgiutils/debug/: __init__.py  _listeners.py  _views.py  utils.py
c2cwsgiutils/request_tracking/: __init__.py  _sql.py
c2cwsgiutils/scripts/: check_es.py  coverage_report.py  genversion.py  stats_db.py  test_print.py
c2cwsgiutils/sql_profiler/: __init__.py  _impl.py
c2cwsgiutils/sqlalchemylogger/: README.md  README.rst  _filters.py  _models.py  filters.py  handlers.py  models.py
c2cwsgiutils/sqlalchemylogger/examples/: example.py
c2cwsgiutils/stats_pyramid/: __init__.py  _db_spy.py  _pyramid_spy.py  _views.py
c2cwsgiutils/templates/: index.html.mako
ci/: .snyk  clean-dockerhub-tag  config.yaml  dpkg-versions.yaml  pip-cve-ignore  publish  requirements.txt
docs/general_presentation/: Makefile  README.md  architecture.dot  index.html
docs/monitoring_presentation/: .gitignore  Makefile  architecture.dot  index.html
scripts/: c2cwsgiutils-run  install-docker  install-gdal  publish  release
tests/: test_acceptance_image.py  test_broadcast.py  test_init.py  test_loader.py  test_metrics.py  test_patch.py  test_prometheus.py  test_sqlalchemylogger.py  test_stats.py  test_stats_pyramid.py
tests/acceptance/: test_utils.py  test_wsgi.py
